--- a/build.gradle
+++ b/build.gradle
@@ -8,6 +8,7 @@ buildscript {
     }
     dependencies {
         classpath 'com.android.tools.build:gradle:3.6.1'
+        classpath 'com.google.android.gms:oss-licenses-plugin:0.10.1'
         
         // NOTE: Do not place your application dependencies here; they belong
         // in the individual module build.gradle files
