--- a/app/build.gradle
+++ b/app/build.gradle
@@ -73,6 +73,6 @@ dependencies {
     implementation 'com.google.code.gson:gson:2.8.6'
     implementation 'com.takisoft.preferencex:preferencex:1.1.0'
     implementation 'com.takisoft.preferencex:preferencex-colorpicker:1.1.0'
-    implementation 'com.takisoft.preferencex:preferencex-simplemenu:1.1.0'
+    implementation 'com.github.NekoInverter.preferencex-android:preferencex-simplemenu:88f93154b2'
     implementation 'com.timehop.stickyheadersrecyclerview:library:0.4.3@aar'
 }
