--- a/build.gradle
+++ b/build.gradle
@@ -7,7 +7,7 @@ buildscript {
         
     }
     dependencies {
-        classpath 'com.android.tools.build:gradle:4.0.0-rc01'
+        classpath 'com.android.tools.build:gradle:4.0.0'
         classpath 'com.google.android.gms:oss-licenses-plugin:0.10.2'
         
         // NOTE: Do not place your application dependencies here; they belong
