Android R: add hooker for new method signature
com.android.server.SystemServer#startBootstrapServices(com.android.server.utils.TimingsTraceAndSlog)

--- a/edxp-common/build.gradle
+++ b/edxp-common/build.gradle
@@ -1,7 +1,7 @@
 apply plugin: 'com.android.library'
 
 android {
-    compileSdkVersion 28
+    compileSdkVersion androidCompileSdkVersion.toInteger()
 
     defaultConfig {
         minSdkVersion 26
