--- a/edxp-core/build.gradle
+++ b/edxp-core/build.gradle
@@ -37,7 +37,7 @@ ext {
 }
 
 android {
-    compileSdkVersion 28
+    compileSdkVersion androidCompileSdkVersion.toInteger()
     defaultConfig {
         minSdkVersion rootProject.ext.minSdkVersion
         targetSdkVersion rootProject.ext.targetSdkVersion
