--- a/appveyor.yml
+++ b/appveyor.yml
@@ -14,7 +14,7 @@ install:
   - C:\android-sdk-windows\tools\bin\sdkmanager.bat "build-tools;28.0.3" > nul
   - C:\android-sdk-windows\tools\bin\sdkmanager.bat "cmake;3.6.4111459" > nul
   - C:\android-sdk-windows\tools\bin\sdkmanager.bat "patcher;v4" > nul
-  - C:\android-sdk-windows\tools\bin\sdkmanager.bat "ndk-bundle" > nul
+  - C:\android-sdk-windows\tools\bin\sdkmanager.bat "ndk;22.0.6917172" —channel=1 > nul
   - set PATH=%PATH%;C:\android-sdk-windows\ndk-bundle;C:\android-sdk-windows\build-tools\28.0.3
 
 build_script:
