--- a/edxp-common/build.gradle
+++ b/edxp-common/build.gradle
@@ -4,8 +4,8 @@ android {
     compileSdkVersion androidCompileSdkVersion.toInteger()
 
     defaultConfig {
-        minSdkVersion 26
-        targetSdkVersion 28
+        minSdkVersion minSdkVersion
+        targetSdkVersion targetSdkVersion
         versionCode 1
         versionName "1.0"
     }
