--- a/gradle.properties
+++ b/gradle.properties
@@ -2,3 +2,5 @@ androidCompileSdkVersion=30
 androidCompileNdkVersion=22.0.6917172
 android.prefabVersion=1.1.2
 apiCode=93
+minSdkVersion=26
+targetSdkVersion=30
