--- a/gradle.properties
+++ b/gradle.properties
@@ -1,6 +1,6 @@
 androidCompileSdkVersion=30
+androidMinSdkVersion=26
+androidTargetSdkVersion=30
 androidCompileNdkVersion=22.0.6917172
 android.prefabVersion=1.1.2
 apiCode=93
-minSdkVersion=26
-targetSdkVersion=30
