--- a/edxp-common/build.gradle
+++ b/edxp-common/build.gradle
@@ -4,8 +4,8 @@ android {
     compileSdkVersion androidCompileSdkVersion.toInteger()
 
     defaultConfig {
-        minSdkVersion minSdkVersion
-        targetSdkVersion targetSdkVersion
+        minSdkVersion androidMinSdkVersion.toInteger()
+        targetSdkVersion androidTargetSdkVersion.toInteger()
         versionCode 1
         versionName "1.0"
     }
