--- a/edxp-core/build.gradle
+++ b/edxp-core/build.gradle
@@ -60,8 +60,8 @@ dependencies {
 android {
     compileSdkVersion androidCompileSdkVersion.toInteger()
     defaultConfig {
-        minSdkVersion rootProject.ext.minSdkVersion
-        targetSdkVersion rootProject.ext.targetSdkVersion
+        minSdkVersion androidMinSdkVersion.toInteger()
+        targetSdkVersion androidTargetSdkVersion.toInteger()
 
         buildFeatures {
             prefab true
