--- a/xposed-bridge/build.gradle
+++ b/xposed-bridge/build.gradle
@@ -5,7 +5,7 @@ android {
     ndkVersion androidCompileNdkVersion
 
     defaultConfig {
-        minSdkVersion minSdkVersion
+        minSdkVersion androidMinSdkVersion.toInteger()
     }
 
     sourceSets {
