--- a/edxp-core/build.gradle
+++ b/edxp-core/build.gradle
@@ -150,16 +150,7 @@ afterEvaluate {
                         expand(moduleId: "$magiskModuleId", backend: "$backendCapped",
                                 versionName: "$version" + " ($backend)",
                                 versionCode: "$versionCode", authorList: "$authorList",
-                                apiCode: "$apiCode")
-                        filter(FixCrLfFilter.class, eol: FixCrLfFilter.CrLf.newInstance("lf"))
-                    }
-                    copy {
-                        from "${projectDir}/tpl/riru_module.prop.tpl"
-                        into "$templateRootPath/riru"
-                        rename "riru_module.prop.tpl", "module.prop.new"
-                        expand(minApi: "$moduleMinRiruApiVersion",
-                                versionName: "$version" + " ($backend)",
-                                versionCode: "$versionCode", authorList: "$authorList")
+                                apiCode: "$apiCode", minApi: "$moduleMinRiruApiVersion")
                         filter(FixCrLfFilter.class, eol: FixCrLfFilter.CrLf.newInstance("lf"))
                     }
                 }
@@ -208,7 +199,7 @@ afterEvaluate {
                         exclude "README.md", "META-INF"
                     }.visit { f ->
                         if (f.directory) return
-                        file(f.file.path + ".sha256sum").text = calcSha256(f.file)
+                        file(f.file.path + ".s").text = calcSha256(f.file)
                     }
                 }
             }
