--- a/edxp-core/build.gradle
+++ b/edxp-core/build.gradle
@@ -165,7 +165,7 @@ afterEvaluate {
                     copy {
                         from "${projectDir}/template_override"
                         into zipPathMagiskReleasePath
-                        include 'riru.sh'
+                        include 'util_functions.sh'
                         filter { line ->
                             line.replaceAll('%%%RIRU_MODULE_ID%%%', riruModuleId)
                                     .replaceAll('%%%RIRU_MIN_API_VERSION%%%', moduleMinRiruApiVersion.toString())
