--- a/edxp-core/.gitignore
+++ b/edxp-core/.gitignore
@@ -4,6 +4,7 @@
 /obj
 /release
 /template_override/module.prop
+/template_override/en_US.sh
 /template_override/system
 /template_override/system_x86
 /template_override/riru/module.prop.new
