--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -9,6 +9,9 @@
     <uses-permission android:name="android.permission.REQUEST_INSTALL_PACKAGES" />
     <uses-permission android:name="android.permission.REQUEST_DELETE_PACKAGES" />
     <uses-permission android:name="android.permission.KILL_BACKGROUND_PROCESSES" />
+    <uses-permission
+        android:name="android.permission.QUERY_ALL_PACKAGES"
+        tools:ignore="QueryAllPackagesPermission" />
 
     <application
         android:name=".App"
@@ -40,7 +43,7 @@
             android:label="@string/Downloads" />
         <activity
             android:name=".ui.activity.ModuleScopeActivity"
-            android:label="@string/menu_scope"/>
+            android:label="@string/menu_scope" />
         <activity
             android:name=".ui.activity.MainActivity"
             android:label="@string/app_name"
