--- a/edxp-core/build.gradle
+++ b/edxp-core/build.gradle
@@ -79,7 +79,7 @@ android {
             }
         }
         release {
-            minifyEnabled false
+            minifyEnabled true
             proguardFiles getDefaultProguardFile('proguard-android-optimize.txt'), 'proguard-rules.pro'
 
             externalNativeBuild {
