--- a/gradle.properties
+++ b/gradle.properties
@@ -4,3 +4,5 @@ androidTargetSdkVersion=30
 androidCompileNdkVersion=22.0.7026061
 android.prefabVersion=1.1.2
 apiCode=93
+android.useAndroidX=true
+android.enableJetifier=true
