--- a/edxp-core/build.gradle
+++ b/edxp-core/build.gradle
@@ -38,7 +38,7 @@ dependencies {
     implementation 'rikka.ndk:riru:10'
     implementation project(path: ':sandhook-hooklib')
     compileOnly project(':hiddenapi-stubs')
-    compileOnly 'com.android.support:support-annotations:28.0.0'
+    compileOnly 'androidx.annotation:annotation:1.1.0'
 }
 
 android {
