--- a/app/build.gradle
+++ b/app/build.gradle
@@ -3,6 +3,7 @@ apply plugin: 'com.android.application'
 android {
     compileSdkVersion 30
     buildToolsVersion "30.0.3"
+    ndkVersion androidCompileNdkVersion
 
     buildFeatures {
         viewBinding = true
