--- a/sandhook-hooklib/build.gradle
+++ b/sandhook-hooklib/build.gradle
@@ -17,6 +17,7 @@ android {
         ndk {
             abiFilters 'armeabi-v7a', 'arm64-v8a'
         }
+        consumerProguardFiles 'proguard-rules.pro'
     }
 
     externalNativeBuild {
